k8s/authelia.yaml
# Usage:
#  Create a secret redis-config with an entry for a redis password:
#    apiVersion: v1
#    data:
#      redis.conf: |
#        requirepass abcdef1234
#    kind: Secret
#    metadata:
#      name: redis-config
#    type: Opaque
#  Create a secret ldap-prepopulate based on example in
#    install/ldap-prepopulate-ldif.example
---
apiVersion: v1
kind: Service
metadata:
  name: $SERVICE_NAME
spec:
  clusterIP: $AUTHELIA_IP
  selector:
    app.kubernetes.io/name: $SERVICE_NAME
  ports:
  - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $SERVICE_NAME
  labels:
    app.kubernetes.io/name: $SERVICE_NAME
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: $SERVICE_NAME
  template:
    metadata:
      labels:
        app.kubernetes.io/name: $SERVICE_NAME
    spec:
      containers:
      - name: $SERVICE_NAME
        image: authelia/authelia:$VERSION_AUTHELIA
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 50m
            memory: 256Mi
        volumeMounts:
        - mountPath: /config/configuration.yml
          name: config
          subPath: configuration.yml
        - mountPath: /config/secrets
          name: secrets
      dnsConfig:
        options:
        - name: use-vc
        - name: ndots
      volumes:
      - name: config
        configMap:
          name: $SERVICE_NAME
      - name: secrets
        secret:
          secretName: authelia-secrets
          defaultMode: 0400
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - secretName: tls-$SERVICE_NAME
    hosts:
    - authtotp.$DOMAIN
  rules:
  - host: authtotp.$DOMAIN
    http:
      paths:
      - path: /
        backend:
          service:
            name: $SERVICE_NAME
            port:
              number: 80
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: ldap
  name: ldap
spec:
  ports:
  - port: 389
  selector:
    app.kubernetes.io/name: ldap
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: ldap
  name: ldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ldap
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ldap
    spec:
      containers:
      - name: ldap
        image: dinkel/openldap:latest
        ports:
        - containerPort: 389
        volumeMounts:
        - mountPath: /etc/ldap.dist/prepopulate
          name: prepopulate
      volumes:
      - name: prepopulate
        secret:
          secretName: ldap-prepopulate
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: redis
  ports:
  - port: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app.kubernetes.io/name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis
    spec:
      containers:
      - name: redis
        command: [redis-server]
        args: [/etc/redis/redis.conf]
        image: redis:3.2.11-alpine
        ports:
        - containerPort: 6379
        volumeMounts:
        - mountPath: /etc/redis/redis.conf
          name: redis-config
          subPath: redis.conf
      volumes:
      - name: redis-config
        secret:
          secretName: redis-config
